@@ -1,5 +1,7 @@
 AUX configure.py.patch 1409 RMD160 f8a2b0c92fc53756679cff39d366b34cfb5b6d72 SHA1 c2cb0478de7d4f29c4db656f824b4dfce742209d SHA256 c80ecf0323ba47e14ac7e9941cf640a6ae552ad558001984097a8a33861028bd
 DIST PyQt-x11-gpl-4.6.1.tar.gz 6979314 RMD160 6f0b70dc2b23809a7bbd7c3ab53b48e4e52be2ea SHA1 a1ef956ff2f3fbdada98032c1332d77a2fc89f37 SHA256 1443a3f32a9ee66fe1804e21d5ff358709422a7aaf44aa6e43c5602757772058
+DIST PyQt-x11-gpl-4.7-snapshot-20091026.tar.gz 1308266 RMD160 09ace3b89bfb664ddafe1c51d84a43defc7db0cf SHA1 d609145f75ecdc7f566d32beb99f6948cf15c1b6 SHA256 64c82f870984c59c49b7c55e437e882a061d15295a2784c0a9b968a2e64e354a
 EBUILD PyQt4-4.6.1.ebuild 3872 RMD160 e2ed973f56b279de898e23e84ec13089bfdad680 SHA1 292692e41f6c7d0be7728ff84a4b977077427ce2 SHA256 8612351c5db19b91fff6c1810c54e8e16178d0e734d78950a28f713bcf986b7f
-MISC ChangeLog 11735 RMD160 794da0882637ca7d9255b4617039c2c335e5f0ee SHA1 8e59e2d632131559c0418f010fef574ae2a7aae1 SHA256 4891afab8960d066de5c295ddb0e5cf5eaf3db84b6b504dc4a5f860df8ec0258
+EBUILD PyQt4-4.7_pre20091026.ebuild 3869 RMD160 da571d9375a318023c8931d7fd9bacd16f2f06f7 SHA1 7167ff458dd26777227ded0b3c8b04095d19a752 SHA256 5a1d55238a6ccc438ca1f6acd1fbc4202e4df40f4f56b9d4651c2d99fd26b0ff
+MISC ChangeLog 11875 RMD160 ab38f3a8a798cedb0c35498870425d251c754cd0 SHA1 c04c53186a373205e0886e1f56db47df70a6edb7 SHA256 bb4eea1da4486233730c4b6f25e09505d5e19196bd8e215f9f76a3d7df08d879
 MISC metadata.xml 784 RMD160 f98352d1efdc46ce85fa86a251e0334953953171 SHA1 8dcecbf0e4091ab3b8387523ec06a602a01821a3 SHA256 dd8004eeba543eba4dbc1f4ab6a3693c12d1185e9b33d028efd495f80ba18476
