@@ -1,4 +1,6 @@
+DIST sip-4.10-snapshot-20091026.tar.gz 654933 RMD160 cd3cf7f2283b3aceab4e669abb74fbf40f5c7842 SHA1 559f03e50537b3e0228cd1f7bc48e405ac0af7f8 SHA256 d04af01c1efeef36a3b28a6c2d3df5740373be25ed8ea0614f10adf61260b472
 DIST sip-4.9.1.tar.gz 660693 RMD160 aaee9bd22d6bfba9c8eeb2649cf14c5eaa089c96 SHA1 097b85511ce082d526fce8279fe48fa991f7cdf6 SHA256 d2d2201bc61bca258c024f45400fc445cc230cbebfdb516e4ec041dcd248990e
+EBUILD sip-4.10_pre20091026.ebuild 1475 RMD160 9b922efaadab2f180cbb1cf94cdbf27141671f8f SHA1 a15156ad2388722930384fa820253cf8ee110faa SHA256 45171b1e34f95605195e49246afac658783d66b15fb5227c297d28150a04d3cb
 EBUILD sip-4.9.1.ebuild 1487 RMD160 012911f2611a3c994317e4d813872913345d62bf SHA1 686c3b880afcaf71076d6ea35fd68fdefd14a099 SHA256 6ea0ce50ba053bf75d0d99959d77a319c71b52f00bbf68d4096019578480a950
-MISC ChangeLog 4963 RMD160 a0a40e6a042f6aa8a27123a648b89e6a4cc2f33a SHA1 b1418cd2a6dc04a7920b5ae0fb394897c17eae56 SHA256 df850213f681e762839621e49eecbff1dff950aeaa120bb2c47b62120d09c2d5
+MISC ChangeLog 5101 RMD160 21689bf1f4efc3a2e2074468795e276f83861fca SHA1 311d205176c7ceeaff3910c39af2797a3f8becb7 SHA256 6ac7f7ead5b8c5c5e8506e6b123415660e267daef0fc07e44d30f06769479175
 MISC metadata.xml 175 RMD160 74ecde8b999da503a2733b49ed618d5d50d26476 SHA1 ec86e15b85c2bc4429ad67bb52238b44f2b16cbd SHA256 26b18db06b1665422af8905fb70f8f48920a048578172d62b9689e273ee39a2d
