@@ -2,15 +2,17 @@
 # Add your name and the date, as well as an explanation for the mask
 # Make sure the atoms you add are valid!
 
+# Markos Chandras <hwoarang@gentoo.org> (27 Oct 2009)
+# Snapshots are not for everybody :)
+=dev-python/PyQt4-4.7_pre*
+=dev-python/sip-4.10_pre*
+=dev-python/qscintilla-python-2.4.1_pre*
+=x11-libs/qscintilla-2.4.1_pre*
+
 # Markos Chandras <hwoarang@gentoo.org> (14 Oct 2009)
 # Masking beta release. Unmask it when you are sure that it
 # works fine
 =dev-util/qt-creator-1.3.0_beta
-
-# Markos Chandras <hwoarang@gentoo.org> (02 Oct 2009)
-# Snapshots are not for everybody :)
-=dev-python/qscintilla-python-2.4.1_pre*
-=x11-libs/qscintilla-2.4.1_pre*
 
 # Markos Chandras <hwoarang@gentoo.org> (15 Aug 2009)
 # Upstream SVN repo seems dead
