@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sip-4.10_pre20091026 (27 Oct 2009)
+
+  27 Oct 2009; Markos Chandras <hwoarang@gentoo.org>
+  +sip-4.10_pre20091026.ebuild:
+  New snapshot
+
 *sip-4.9.1 (23 Oct 2009)
 
   23 Oct 2009; Davide Pesavento <davidepesa@gmail.com> -sip-4.9.ebuild,
